# dynamic_objects_fusion

./: CMakeLists.txt  package.xml  sensor_plugins.xml
include/dynamic_objects_fusion/: dynamic_objects_fusion.hpp  fused_object.hpp  hungarian_bigraph_matcher.hpp  kalman_fusion.hpp  sensor_object.hpp
include/dynamic_objects_fusion/ros/: base_fusion_ros.hpp  dynamic_objects_fusion_ros.hpp  dynamic_objects_fusion_rviz.hpp  radar_fusion_ros.hpp
msg/: ObjectsList.msg
plugins/ros/: radar_fusion_ros.cpp
src/: dynamic_objects_fusion.cpp  fused_object.cpp  hungarian_bigraph_matcher.cpp  kalman_fusion.cpp  sensor_object.cpp
src/ros/: base_fusion_ros.cpp  dynamic_objects_fusion_node.cpp  dynamic_objects_fusion_ros.cpp  dynamic_objects_fusion_rviz.cpp
