<?xml version="1.0"?>
<package format="2">
  <name>dynamic_objects_fusion</name>
  <version>0.0.0</version>
  <description>The dynamic_objects_fusion package</description>

  <maintainer email="shiveshkhaitan@gmail.com">Shivesh Khaitan</maintainer>

  <license>MIT</license>

  <author email="shiveshkhaitan@gmail.com">Shivesh Khaitan</author>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <dynamic_objects_fusion plugin="${prefix}/sensor_plugins.xml"/>
  </export>
</package>
